tests/rosetta/out/C/assertions.error
cc: exit status 1
/tmp/assertions.c:15:5: error: redefinition of ‘main’
   15 | int main() {
      |     ^~~~
/tmp/assertions.c:6:5: note: previous definition of ‘main’ with type ‘int()’
    6 | int main() {
      |     ^~~~
