tests/rosetta/out/C/assertions.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:46Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:46Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  int x = 43;
  if (x != 42) {
    printf("Assertion failed\n");
  } else {
    printf("Assertion passed\n");
  }
}

int main() {
  main();
  return 0;
}
